@@ -24,7 +24,7 @@ use Nagios::Plugin::Threshold;
 use Net::DNS::Resolver;
 use Pod::Usage qw(pod2usage);
 
-use version; our $VERSION = '0.9.1';
+use version; our $VERSION = '0.9.2';
 
 # IMPORTANT: Nagios plugins could be executed using embedded perl in this case
 #            the main routine would be executed as a subroutine and all the
@@ -159,20 +159,20 @@ for my $proc (@procs) {
             $plugin->nagios_exit( UNKNOWN, "Error: $cmax is not a number" );
         }
 
-        if ( $wmin > $wmax ) {
+        if ( $wmin && $wmax && $wmin > $wmax ) {
             $plugin->nagios_exit( UNKNOWN,
                 "Error: $wmin (min) is bigger than $wmax (max)" );
         }
-        if ( $cmin > $cmax ) {
+        if ( $cmin && $cmax && $cmin > $cmax ) {
             $plugin->nagios_exit( UNKNOWN,
                 "Error: $cmin (min) is bigger than $cmax (max)" );
         }
 
-        if ( $wmin > $cmin ) {
+        if ( $wmin && $cmin && $wmin > $cmin ) {
             $plugin->nagios_exit( UNKNOWN,
                 "Error: $wmin (warning) is bigger than $wmin (critical)" );
         }
-        if ( $wmax > $cmax ) {
+        if ( $wmax && $cmax && $wmax > $cmax ) {
             $plugin->nagios_exit( UNKNOWN,
                 "Error: $wmax (warning) is bigger than $cmax (critical)" );
         }
@@ -288,18 +288,23 @@ check several processes at once.
 
 =head1 VERSION
 
-Version 0.9.1
+Version 0.9.2
 
 =head1 SYNOPSIS
 
- check_procs_multi --proc name,warning_min,warning_max,critical_min,critical_max
+ check_procs_multi
+            --proc name[,warning_min,warning_max,critical_min,critical_max]
             [--verbose]
             [--version|--help]
 
  Mandatory arguments:
-  --proc           name,warning_min,warning_max,critical_min,critical_max
+  --proc           name[,warning_min,warning_max,critical_min,critical_max]
                              process check definition
 
+ Several --proc checks can be specified at the same time
+ If only the name of the process is specified check_procs_multi assumes ,1,,1,
+ (i.e., critical if no processes are running)
+    
  Options:
   --help,-h,-?               prints the usage
   --version,V                print version number
