@@ -1,2 +1,3 @@
+2008-02-12: 0.9.2  fixed a bug in the sanity checks
 2008-02-12: 0.9.1  default: min 1 process
 2008-02-11: 0.9.0  initial testing release
